--- a/index.html
+++ b/index.html
@@ -1,1 +1,334 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Loyverse WooCommerce Integration by SKUplugs</title>
+  <meta name="description" content="Discover how SKUplugs connects Loyverse POS with WooCommerce for real-time inventory, unified customer data, and streamlined retail operations." />
+  <style>
+    :root{
+      --bg: #f6f8fb;
+      --card: #ffffff;
+      --accent: #0b6efd;
+      --muted: #6b7280;
+      --max-width: 880px;
+      --radius: 14px;
+      --glass: rgba(255,255,255,0.6);
+      --shadow: 0 6px 20px rgba(18,38,63,0.08);
+      --mono: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:var(--mono);
+      background:
+        linear-gradient(180deg, rgba(11,110,237,0.04), rgba(11,110,237,0.01)),
+        var(--bg);
+      color:#14213d;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.58;
+      padding:32px 20px;
+      display:flex;
+      justify-content:center;
+    }
+
+    .container{
+      width:100%;
+      max-width:var(--max-width);
+      background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(250,250,252,0.9));
+      border-radius:18px;
+      box-shadow:var(--shadow);
+      padding:36px;
+      border:1px solid rgba(12,34,56,0.04);
+      backdrop-filter: blur(6px);
+    }
+
+    header{
+      display:flex;
+      gap:18px;
+      align-items:center;
+      margin-bottom:18px;
+    }
+
+    .logo{
+      width:64px;height:64px;
+      border-radius:12px;
+      background:linear-gradient(180deg,var(--accent), #0771d9);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      color:white;
+      font-weight:700;
+      font-size:20px;
+      box-shadow:0 6px 18px rgba(11,110,237,0.16);
+    }
+
+    h1{
+      margin:0;
+      font-size:1.55rem;
+      color:#0b2540;
+      line-height:1.18;
+    }
+
+    .subtitle{
+      color:var(--muted);
+      margin-top:6px;
+      font-size:0.95rem;
+    }
+
+    .hero{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:22px;
+      align-items:start;
+      margin:22px 0 28px 0;
+    }
+
+    .hero .intro{
+      background:var(--card);
+      padding:20px;
+      border-radius:12px;
+      box-shadow:0 6px 20px rgba(12,34,56,0.04);
+      border:1px solid rgba(10,24,40,0.03);
+    }
+
+    .meta{
+      display:flex;
+      gap:12px;
+      margin-top:10px;
+      align-items:center;
+      flex-wrap:wrap;
+      font-size:0.88rem;
+      color:var(--muted);
+    }
+
+    .pill{
+      background:rgba(11,110,237,0.08);
+      color:var(--accent);
+      padding:6px 10px;
+      border-radius:999px;
+      font-weight:600;
+      font-size:0.85rem;
+    }
+
+    main h2{
+      font-size:1.12rem;
+      margin-top:28px;
+      color:#08203a;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap:16px;
+      margin-top:14px;
+    }
+
+    .card{
+      background:var(--card);
+      padding:16px;
+      border-radius:12px;
+      border:1px solid rgba(10,24,40,0.03);
+      box-shadow:0 6px 18px rgba(8,20,40,0.03);
+    }
+
+    .card h3{
+      margin:0 0 8px 0;
+      font-size:1rem;
+    }
+    .card p{margin:0;color:var(--muted);font-size:0.95rem}
+
+    ul{padding-left:18px;color:var(--muted)}
+    li{margin:8px 0}
+
+    .case{
+      background:linear-gradient(180deg, rgba(3,82,162,0.02), rgba(3,82,162,0.01));
+      padding:18px;
+      border-radius:12px;
+      margin-top:18px;
+      border:1px solid rgba(3,82,162,0.03);
+    }
+
+    footer{
+      margin-top:26px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:12px;
+      flex-wrap:wrap;
+    }
+
+    .btn{
+      background:var(--accent);
+      color:white;
+      border:none;
+      padding:10px 14px;
+      font-weight:600;
+      border-radius:10px;
+      cursor:pointer;
+      box-shadow:0 8px 24px rgba(11,110,237,0.12);
+      text-decoration:none;
+    }
+
+    .muted{
+      color:var(--muted);
+      font-size:0.92rem;
+    }
+
+    @media (max-width:720px){
+      .grid{grid-template-columns:1fr}
+      header{gap:12px}
+      .logo{width:54px;height:54px;font-size:18px}
+    }
+
+  </style>
+</head>
+<body>
+  <article class="container" aria-labelledby="main-title">
+    <header>
+      <div class="logo" aria-hidden="true">SP</div>
+      <div>
+        <h1 id="main-title">Loyverse WooCommerce Integration by SKUplugs</h1>
+        <div class="subtitle">How SKUplugs connects Loyverse POS to WooCommerce for real-time sync, unified data, and streamlined retail operations.</div>
+        <div class="meta" role="list">
+          <span class="pill" role="listitem">Integration</span>
+          <span class="pill" role="listitem">Loyverse • WooCommerce</span>
+          <span class="pill" role="listitem">SKUplugs</span>
+        </div>
+      </div>
+    </header>
+
+    <section class="hero" aria-label="Introduction">
+      <div class="intro">
+        <p>
+          In today's ever-changing retail environment, managing multiple sales channels efficiently is essential.
+          Retailers and eCommerce sellers need reliable tools that streamline processes, sync data, and provide an integrated view of operations.
+          The <a href="https://skuplugs.com/loyverse-woocommerce-integration/"><strong>Loyverse WooCommerce integration from SKUplugs</strong></a> connects your Loyverse POS system with your WooCommerce store to do exactly that.
+        </p>
+      </div>
+
+      <div class="meta" aria-hidden="true" style="justify-content:space-between">
+        <div class="muted">Comprehensive solution for bridging offline and online sales.</div>
+        <div class="muted">Estimated read: 4 min</div>
+      </div>
+    </section>
+
+    <main>
+      <section aria-labelledby="understanding">
+        <h2 id="understanding">Understanding Loyverse POS and WooCommerce</h2>
+        <p class="muted">
+          <strong>Loyverse Point of Sale (POS)</strong> is known for its easy-to-use interface, affordability, and features that fit small to medium businesses.
+          <strong>WooCommerce</strong> powers thousands of online stores globally. Together, they form a solution that connects offline and online sales channels.
+        </p>
+      </section>
+
+      <section aria-labelledby="what-is">
+        <h2 id="what-is">What is the Loyverse WooCommerce Integration?</h2>
+        <p class="muted">
+          The integration connects Loyverse POS with a WooCommerce store to enable real-time synchronization of sales, inventory, and customer information.
+          Whether sales happen in a store or online, data updates immediately in both systems — reducing manual entry and errors.
+        </p>
+      </section>
+
+      <section aria-labelledby="role-skuplugs">
+        <h2 id="role-skuplugs">The Role of SKUplugs in the Integration</h2>
+        <p class="muted">
+          <strong>SKUplugs</strong> specializes in tailored integrations for retail. Their Loyverse-WooCommerce connector offers automated inventory updates, customer sync, and consolidated reporting.
+          Whether you need a simple WooCommerce POS connection or a full marketplace integration, SKUplugs provides a scalable platform.
+        </p>
+      </section>
+
+      <section aria-labelledby="advantages">
+        <h2 id="advantages">Advantages of Loyverse & WooCommerce Integration</h2>
+
+        <div class="grid" role="list">
+          <article class="card" role="listitem" aria-labelledby="adv-1">
+            <h3 id="adv-1">Real-Time Inventory Management</h3>
+            <p>Stock levels update instantly across channels after each sale, preventing overselling and stockouts.</p>
+          </article>
+
+          <article class="card" role="listitem" aria-labelledby="adv-2">
+            <h3 id="adv-2">Streamlined Sales Operations</h3>
+            <p>Sales recorded in Loyverse or WooCommerce automatically sync, reducing manual work and freeing staff for customer service.</p>
+          </article>
+
+          <article class="card" role="listitem" aria-labelledby="adv-3">
+            <h3 id="adv-3">Unified Customer Data</h3>
+            <p>Combine customer data from offline and online sales for targeted marketing and loyalty programs.</p>
+          </article>
+
+          <article class="card" role="listitem" aria-labelledby="adv-4">
+            <h3 id="adv-4">Enhanced Reporting & Analytics</h3>
+            <p>Access consolidated reports that cover both offline and online sales to make informed decisions and spot trends.</p>
+          </article>
+        </div>
+
+        <div style="margin-top:14px">
+          <h3 style="margin-bottom:8px">Simple Marketplace Integration</h3>
+          <p class="muted">
+            The integration supports synchronizing multiple sales channels (e.g., Amazon, eBay, Etsy) so you can manage inventory and orders from a single dashboard.
+          </p>
+        </div>
+      </section>
+
+      <section aria-labelledby="how">
+        <h2 id="how">How Does the Integration Work?</h2>
+        <p class="muted">
+          SKUplugs achieves the connection using middleware APIs, platforms, or custom plugins. Typical steps include:
+        </p>
+
+        <ul>
+          <li>Connect your Loyverse POS account with your WooCommerce store.</li>
+          <li>Configure synchronization for inventory, products, and customer data.</li>
+          <li>Automate data flow to ensure immediate updates.</li>
+          <li>Monitor and manage integration through an intuitive dashboard.</li>
+        </ul>
+      </section>
+
+      <section aria-labelledby="why-skuplugs">
+        <h2 id="why-skuplugs">Why Choose SKUplugs?</h2>
+        <p class="muted">
+          SKUplugs stands out for tailored solutions, professional support, and a user-friendly process. Their expertise in POS and marketplace sync helps optimize retail systems for growth.
+        </p>
+      </section>
+
+      <section aria-labelledby="case">
+        <h2 id="case">Customer Experience: A Real-Life Case</h2>
+        <div class="case" role="article" aria-labelledby="case-title">
+          <h3 id="case-title">FashionFiesta — boutique example</h3>
+          <p class="muted">
+            FashionFiesta, a boutique clothing retailer with a physical store and WooCommerce shop, struggled with inventory management and overselling.
+            After integrating Loyverse with WooCommerce using SKUplugs, they synchronized stock and customer data, improved checkout speed, and gained sales insights.
+            Within months, inventory accuracy and customer satisfaction increased noticeably.
+          </p>
+        </div>
+      </section>
+
+      <section aria-labelledby="final">
+        <h2 id="final">Final Thoughts</h2>
+        <p class="muted">
+          The <strong>Loyverse WooCommerce integration</strong> by SKUplugs is a comprehensive solution that unifies offline and online retail operations.
+          With real-time sync, marketplace support, and consolidated reporting, it helps retailers improve efficiency and customer experience.
+        </p>
+
+        <p class="muted">
+          If you're ready to simplify retail operations and boost sales, consider integrating Loyverse POS with WooCommerce using a trusted provider like SKUplugs.
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <div class="muted">&copy; <span id="year"></span> SKUplugs — Loyverse &amp; WooCommerce Integration</div>
+       </footer>
+  </article>
+
+  <script>
+    // Insert current year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
 
